[gd_scene load_steps=16 format=3 uid="uid://di360h4q2r2we"]

[ext_resource type="Script" uid="uid://ced3oeh5brbta" path="res://game/start/start_menu.gd" id="1_jwbto"]
[ext_resource type="PackedScene" uid="uid://dh3jbvgr066gq" path="res://game/prefabs/title.tscn" id="2_fbv7x"]
[ext_resource type="Script" uid="uid://it2fdbjm2lvp" path="res://addons/awaitable_http_request/awaitable_http_request.gd" id="2_ia0g5"]
[ext_resource type="Texture2D" uid="uid://bpm02mhp6ntiy" path="res://ASSETS/UI/create match button.png" id="2_lweva"]
[ext_resource type="Texture2D" uid="uid://c18rgt70ohqnr" path="res://ASSETS/UI/join button.png" id="3_fbv7x"]
[ext_resource type="PackedScene" uid="uid://bpuvhtgrkp2mo" path="res://game/prefabs/boil/boil_outline.tscn" id="3_qangb"]
[ext_resource type="Shader" uid="uid://ci4jcbprng6kv" path="res://game/prefabs/boil/outline.gdshader" id="4_dpsnm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gqpx0"]
shader = ExtResource("4_dpsnm")
shader_parameter/node_size = Vector2(203, 128)
shader_parameter/outline_color = Color(0.968627, 0.596078, 0.141176, 1)
shader_parameter/bg_color = Color(0.471914, 0.273748, 0.0131317, 1)
shader_parameter/thickness = 12.0
shader_parameter/radius = 10.0
shader_parameter/pixelSize = 5.0
shader_parameter/softness = 0.5
shader_parameter/fps = 6.0
shader_parameter/frameCount = 4.0
shader_parameter/speed = 50.0
shader_parameter/amplitude = 2.5
shader_parameter/freq = 0.05
shader_parameter/noiseStrength = 0.2

[sub_resource type="AtlasTexture" id="AtlasTexture_qangb"]
atlas = ExtResource("2_lweva")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpsnm"]
atlas = ExtResource("2_lweva")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqpx0"]
atlas = ExtResource("2_lweva")
region = Rect2(0, 64, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt08l"]
atlas = ExtResource("3_fbv7x")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qxes"]
atlas = ExtResource("3_fbv7x")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwqc6"]
atlas = ExtResource("3_fbv7x")
region = Rect2(0, 64, 96, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6sdr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qangb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpsnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqpx0")
}],
"loop": true,
"name": &"create",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt08l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qxes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwqc6")
}],
"loop": true,
"name": &"join",
"speed": 5.0
}]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_jwbto")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Title" parent="." instance=ExtResource("2_fbv7x")]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Debug Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -269.0
offset_top = -69.0
offset_right = -34.0
offset_bottom = 245.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BoilOutline" parent="Debug Menu" instance=ExtResource("3_qangb")]
material = SubResource("ShaderMaterial_gqpx0")
layout_mode = 1
offset_left = -1.0
offset_top = -1.0
offset_right = 234.0
offset_bottom = 313.0
parentSize = true

[node name="Address" type="TextEdit" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 47.0
offset_right = 87.5
offset_bottom = 89.0
grow_horizontal = 2
text = "localhost"
placeholder_text = "Address..."

[node name="Port" type="TextEdit" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 95.0
offset_right = 90.5
offset_bottom = 137.0
grow_horizontal = 2
text = "9999"
placeholder_text = "Port..."

[node name="Code" type="TextEdit" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 143.0
offset_right = 90.5
offset_bottom = 185.0
grow_horizontal = 2
text = "default"
placeholder_text = "Code...
"

[node name="DebugClient" type="Button" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 197.0
offset_right = 0.5
offset_bottom = 238.0
grow_horizontal = 2
text = "Client"

[node name="Debug Server" type="Button" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 7.5
offset_top = 197.0
offset_right = 91.5
offset_bottom = 238.0
grow_horizontal = 2
text = "Server"

[node name="MatchmakingAddress" type="TextEdit" parent="Debug Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 245.0
offset_right = 87.5
offset_bottom = 278.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 13
text = "54.89.237.243:8000"
placeholder_text = "Matchmaking"

[node name="JoinMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 75.0
offset_top = -44.0
offset_right = 276.0
offset_bottom = 110.0

[node name="BoilOutline" parent="JoinMenu" instance=ExtResource("3_qangb")]
material = SubResource("ShaderMaterial_gqpx0")
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 201.0
offset_bottom = 154.0
parentSize = true

[node name="Code" type="TextEdit" parent="JoinMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 30.0
offset_right = 72.5
offset_bottom = 72.0
grow_horizontal = 2
placeholder_text = "Code...
"

[node name="JoinMatch" type="Button" parent="JoinMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 79.0
offset_right = 72.5
offset_bottom = 127.0
grow_horizontal = 2
flat = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="JoinMenu/JoinMatch"]
position = Vector2(72.5, 23)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_a6sdr")
animation = &"join"
autoplay = "join"
frame_progress = 0.650468

[node name="AwaitableHTTP" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ia0g5")

[node name="CreateMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 82.0
offset_top = 122.0
offset_right = 282.0
offset_bottom = 232.0

[node name="BoilOutline" parent="CreateMenu" instance=ExtResource("3_qangb")]
material = SubResource("ShaderMaterial_gqpx0")
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 203.0
offset_bottom = 128.0

[node name="CreateMatch" type="Button" parent="CreateMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 35.0
offset_right = 74.0
offset_bottom = 83.0
grow_horizontal = 2
flat = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CreateMenu/CreateMatch"]
position = Vector2(73, 25)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_a6sdr")
animation = &"create"
autoplay = "create"
frame_progress = 0.0245557

[node name="Label" type="Label" parent="CreateMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.5
offset_top = 83.0
offset_right = 70.5
offset_bottom = 106.0
grow_horizontal = 2

[node name="Button" type="Button" parent="."]
offset_left = 361.0
offset_top = 217.0
offset_right = 458.0
offset_bottom = 256.0
text = "Tutorial"

[connection signal="pressed" from="Debug Menu/DebugClient" to="." method="_on_debug_client_pressed"]
[connection signal="pressed" from="Debug Menu/Debug Server" to="." method="_on_debug_server_pressed"]
[connection signal="pressed" from="JoinMenu/JoinMatch" to="." method="_on_join_match_pressed"]
[connection signal="pressed" from="CreateMenu/CreateMatch" to="." method="_on_create_match_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
